Fix Layout Issue #4

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -17,7 +17,12 @@ text {
   font-weight: 700 !important;
 }
 
+.root {
+  position: relative;
+}
+
 .app {
+  position: relative;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -103,15 +108,16 @@ text {
 }
 
 .model {
+  background-color: rgba(#000, 0.1);
   width: 100%;
-  height: 100vh;
+  height: 100%;
   position: absolute;
   top: 0;
   left: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 2rem;
+  padding: 1rem;
   transition: all 0.2s;
 
   .form {
